# StockAnalyzer

stock_analyzer/: README.md  ledger.json  pyproject.toml
stock_analyzer/src/stock_analyzer/: crew.py  main.py
stock_analyzer/src/stock_analyzer/config/: agents.yaml  tasks.yaml
stock_analyzer/src/stock_analyzer/tools/: ledger_reader.py  psx_tool.py
