[project]
name = "stock_analyzer"
version = "0.1.0"
description = "stock_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
stock_analyzer = "stock_analyzer.main:run"
run_crew = "stock_analyzer.main:run"
train = "stock_analyzer.main:train"
replay = "stock_analyzer.main:replay"
test = "stock_analyzer.main:test"
run_with_trigger = "stock_analyzer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
